--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Gyan</title>
-	<link rel="stylesheet" type="text/css" href="gyan.css">
+	
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	
